# bot_reminder

./: .dockerignore  .env.deploy.local.example  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest_result.txt  requirements-dev.txt  requirements.txt  start.sh
.github/: DEPLOY.md  pull_request_template.md
alembic/: env.py
bot/: config.py  logging_setup.py  main.py  version.py
docs/: PROJECT-COMPLETE.md  README.md  v1.0-final-status.md
scripts/: backup_db.py  check_deploy.py  deploy.sh  doc_metrics.py  healthcheck.py  migrate_db.py  notify_telegram.sh  pg_backup.sh  record_deploy.py  restore_db.py  set_bot_avatar.py  setup_github_deploy.ps1  setup_github_deploy.sh  smoke_author.py  smoke_group_mentions.py  smoke_nlp.py  smoke_stars.py  smoke_user_group_assignee.py  verify_ops.py  wisp_restart.sh
tests/: callback_helpers.py  conftest.py  db_helpers.py  test_000_repository.py  test_001_callbacks_handlers.py  test_002_callbacks_snooze_delete.py  test_003_callbacks_menu_list.py  test_004_edit_settings_handlers.py  test_005_handlers_core.py  test_006_collective_handlers.py  test_007_onboarding_handlers.py  test_008_group_manage.py  test_about.py  test_absolute_time_parse.py  test_admin_audit.py  test_admin_mode.py  test_admin_panel.py  test_admin_panel_service.py  test_admin_smoke.py  test_ambiguous_prompt.py  test_ambiguous_time.py  test_assignee_callbacks.py  test_assignee_pick_note.py  test_assignee_prompt.py  test_auto_update.py  test_bot_avatar.py  test_bot_avatar_live.py  test_bot_mention.py  test_bot_privacy.py  test_config.py  (+66 more)
(+222 files in other folders)
