[project]
name = "bot-reminder"
version = "3.38.0"
description = "Telegram-бот напоминаний: текст, голос, NLP, группы и каналы"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "emildg8" }]
keywords = ["telegram", "bot", "reminder", "aiogram", "nlp", "scheduler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

[project.urls]
Homepage = "https://github.com/emildg8/bot_reminder"
Repository = "https://github.com/emildg8/bot_reminder"
Issues = "https://github.com/emildg8/bot_reminder/issues"
Changelog = "https://github.com/emildg8/bot_reminder/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["bot", "tests"]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
